--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "**Who we are:**\n",
     "\n",
-    "We are a software development company, which specializes in mobile application development. We do not create mobile apps for other companies, who need a team of developers, but we come up with the ideas, make them happen and deliver them directly to end users via publishing our applications on Google Play Market and Apple Appstore. Our main idea is to cover as much business and development processes as possible by ourselves to maximize profits by minimizing costs which could be spent on outsourcing some of them."
+    "We are a software development company, which specializes in mobile application development. We do not create mobile apps for other companies, who need a team of developers, but we come up with the ideas, make them happen and deliver them directly to end users via publishing our applications on Google Play Market and Apple Appstore. Our main idea is to cover by ourselves as much business and development processes as possible, not to outsorce them to maximize profits by minimizing costs."
    ]
   },
   {
@@ -32,8 +32,8 @@
     "\n",
     "1. **Step 1: Coming up with the Idea** - for our each app we have to come up with an idea. In order to do this we have to perform market research, follow trends and emerging market vacuums to maximize the chances that our idea is something that can be sold.\n",
     "2. **Step 2: Designing application** - for each application we are planning to create we have to go through analizing the design phase. Are we capable enough to do it ourselves or does it require outsourcing?\n",
-    "3. **Step 3: Monetisation strategy** - depends on the app and on the target market appropriate monetization strategy will make a difference between success and failure.\n",
-    "3. **Step 4: Development** - this step covers actual programming. Depending on the app we have to analize what would be more profitable, program it ourselves, utilizing freelancers or outsorcing the whole development process to other company.\n",
+    "3. **Step 3: Monetisation strategy** - depends on the app and on the target market appropriate monetization strategy will make a difference between a success and a failure.\n",
+    "3. **Step 4: Development** - this step covers actual programming. Depending on the app we have to analize what would be more profitable, programming it ourselves, utilizing freelancers or outsorcing the whole development process to other company.\n",
     "5. **Step 5: Marketing** - what factors should be taken into consideration about how to promote our application. What is the target market? Which types of marketing is the best value for money? How does investing into marketing translates into revenue?\n",
     "4. **Step 6: Publish** - this part focuses on our publishing strategy. What are the rules, regulations and comissions applied to the process of publishing. How to ensure that our app will be a success?"
    ]
