--- a/design.ipynb
+++ b/design.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to differentiate our applications from the competitors we have to appeal to customers views, emotions and logic by making people love our app. And loving and app doesn't come from how well it works or how it doesn;t crash but from general smooth experience and elegant design. \n",
+    "In order to differentiate our applications from the competitors we have to appeal to customers' views, emotions and logic by making people love our app. And loving and app doesn't come from how well it works or how it doesn't crash but from general user experience and elegant design. \n",
     "\n",
     "Design is the first crucial thing that takes customers attention and retains customer. \n",
     "\n",
@@ -22,17 +22,17 @@
     "Good design is something that is hard to explain but we know it when we see it and we have to approach designing problem with caution since it's impact is crucial on success of the application.\n",
     "Both Apple and Google provide guidelines on what they think is a good design. \n",
     "\n",
-    "Apple published a guide called *\"IOS Human Interface Guidelines\"* which describes how you should layout the app, how you should design interface and interactions so it will feel like Apple IOS experience.\n",
+    "Apple published a guide called *\"IOS Human Interface Guidelines\"* describing how you should layout the app, design interface and interactions so it feels like Apple IOS experience.\n",
     "\n",
     "Google has it's own *\"Material Design Principles\"* that shows how to make the best androidy looking and feeling application.\n",
     "\n",
-    "So by following either of this principles we can reduce the risk of failure due to poor design. \n",
+    "Following either of this principles we can reduce the risk of failure due to poor design. \n",
     "\n",
-    "The other variable worth taking into consideration is choosing the color palette. Here market research might come in hand. We can determine what colors do client associate with the domain of our product, be it food, business or time management app. We can take an inspiration from competitors and from what color sells better according to research.\n",
+    "The other variable worth taking into consideration is choosing the color palette. Here market research may come into play. We can determine what colors do client associate with the domain of our product, be it food, business or time management app. We can take the inspiration from competitors and from what color sells better according to research.\n",
     "\n",
     "The next thing is to properly model user flow diagram, to design the interactions inside the app. Thouroughly designed user flow translates into better user experience and reduces the risk of failure due to bad design.\n",
     "\n",
-    "Design is so crucial for our app that sometimes we can outsource it to professional design agancy if we are really sure that the idea worth big investments and return will cover it."
+    "Design is so crucial for our app that sometimes we can outsource it to professional design agency if we are really sure that the idea is worth big investments and return on the investment will cover it."
    ]
   },
   {
@@ -59,7 +59,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
