Added missing TeX tags
Couple of $ tags were missing so I added them

--- a/Model.ipynb
+++ b/Model.ipynb
@@ -61,11 +61,11 @@
    "source": [
     "### Revenue from adds\n",
     "\n",
-    "R_{CPM} - revenue from add views\n",
+    "$R_{CPM}$ - revenue from add views\n",
     "\n",
-    "R_{CPC} - revenue from add clicks\n",
+    "$R_{CPC}$ - revenue from add clicks\n",
     "\n",
-    "//R_{CPA} - revenue from actions taken //e.g. purchasing an app from add, buying product. CPC excludes using CPA\n",
+    "//$R_{CPA}$ - revenue from actions taken //e.g. purchasing an app from add, buying product. CPC excludes using CPA\n",
     "\n",
     "// those costs vary throughout the year. Usually costs go up during periods of intense add campaigns (i.e. Christmas)\n",
     "\n",
@@ -147,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
