Wednesday work on model

--- a/Model.ipynb
+++ b/Model.ipynb
@@ -12,15 +12,30 @@
    "metadata": {},
    "source": [
     "### Total revenue\n",
-    "$R$ - total revenue\n",
     "\n",
-    "$R_{add}$ - revenue from adds\n",
+    "$R_{t+1} : f(R_{add (t)},R_{pr (t)},C_{(t)}) + \\mu(N)$\n",
     "\n",
-    "$R_{pr}$ - revenue from premium accounts\n",
+    "$R_{t+1}$ - total revenue\n",
     "\n",
-    "$C$ - Costs\n",
+    "$R_{add (t)}$ - revenue from adds\n",
     "\n",
-    "$R = R_{add} + R_{pr} - C$\n"
+    "$R_{pr (t)}$ - revenue from premium accounts\n",
+    "\n",
+    "$C_{(t)}$ - Costs\n",
+    "\n",
+    "$\\mu(N)$ - model of uncertainty\n",
+    "\n",
+    "To determine target function we will use following mathematic model:\n",
+    "\n",
+    "$x_{t+1} = x_t + \\delta x_{t,t+1}$\n",
+    "\n",
+    "$\\delta x_{t,t+1} = Px_{t,t+1} - Lx_{t,t+1}$ - profit(income) minus loss\n",
+    "\n",
+    "$R_{t+1} = R_t + PR_{t,t+1} - LR_{t,t+1}$, where \n",
+    "\n",
+    "$PR_{t,t+1} = R_{add (t+1)} + R_{pr (t+1)}$ - total revenue income from moment $t$ to moment $t+1$\n",
+    "\n",
+    "$LR_{t,t+1} = C_{(t+1)}$ - total revenue loss from moment $t$ to moment $t+1$\n"
    ]
   },
   {
@@ -29,13 +44,19 @@
    "source": [
     "### Revenue from premium accounts\n",
     "\n",
-    "$U_c$ - users count in a given month [-]\n",
+    "$R_{pr (t+1)} = R_{pr (t)} + PR_{pr (t,t+1)}$, where\n",
     "\n",
-    "$P_p$ - percent of premium users [%]\n",
+    "$R_{pr (t+1)}$ - revenue from premium accounts at moment $t+1$\n",
+    "\n",
+    "$PR_{pr (t,t+1)}$ - revenue income from moment $t$ to $t+1$\n",
+    "\n",
+    "$PR_{pr (t,t+1)} = Pr_p * P_p * U_{c (t+1)} $ , where:\n",
     "\n",
     "$Pr_p$ - price of premium per month [USD]\n",
     "\n",
-    "$R_{pr} = U_c * P_p * Pr_p$\n"
+    "$P_p = N(\\mu,\\sigma^2)$ - percent of premium users [%] is defined by some normal distribution with $\\sigma^2=$ and $\\mu=$\n",
+    "\n",
+    "$U_{c (t+1)}$ - total users count in a given month [-]\n"
    ]
   },
   {
@@ -44,15 +65,25 @@
    "source": [
     "### User count\n",
     "\n",
-    "$U_c$ - count of users in given month\n",
+    "$U_{c (t+1)} = U_{c (t)} + PU_{c (t,t+1)} - LU_{c (t,t+1)}$ , where:\n",
     "\n",
-    "$U_{c (t-1)}$ - count of users in previous month\n",
+    "$U_{c (t+1)}$ - users count at moment $t+1$\n",
     "\n",
-    "$e_u$ - user retention rate [0 - 1]\n",
+    "$PU_{c (t,t+1)} = U_{n (t+1)}$ - user income from moment $t$ to $t+1$\n",
     "\n",
-    "$U_n$ - new users in given month\n",
+    "$LU_{c (t,t+1)} = U_{c (t)} * a_u$ - user loss from moment $t$ to $t+1$\n",
     "\n",
-    "$U_c = U_{c (t-1)} * e_u + U_n$\n"
+    "In other words:\n",
+    "\n",
+    "$U_{c (t+1)} = U_{c (t)} + U_{n (t+1)} - U_{c (t)} * a_u$ , where:\n",
+    "\n",
+    "$U_{c (t+1)}$ - count of users in given month\n",
+    "\n",
+    "$U_{c (t)}$ - count of users in previous month\n",
+    "\n",
+    "$a_u = N(\\mu,\\sigma^2)$ - user attrition, which is defined by some normal distribution with $\\sigma^2=$ and $\\mu=$\n",
+    "\n",
+    "$U_{n (t+1)}$ - new users in given month (*it depends on marketing*)\n"
    ]
   },
   {
