Adds revenue equations

--- a/Model.ipynb
+++ b/Model.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='red'>Mozna uwzglednic kilka releasow applikacji w ciagu roku</font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Total revenue\n",
     "\n",
     "$R_{t+1} : f(R_{add (t)},R_{pr (t)},C_{(t)}) + \\mu(N)$\n",
@@ -92,46 +85,63 @@
    "source": [
     "### Revenue from adds\n",
     "\n",
-    "$R_{CPM}$ - revenue from add views\n",
+    "Revenue from advertisements can come from three pricing models. Each of them is caltulated using different equations.\n",
     "\n",
-    "$R_{CPC}$ - revenue from add clicks\n",
+    "1. $R_{CPM}$ - revenue from add views\n",
+    "2. $R_{CPC}$ - revenue from clicking on adds\n",
+    "3. $R_{CPA}$ - revenue from actions taken, e.g. purchasing an app from add, buying product. CPC excludes using CPA\n",
     "\n",
-    "//$R_{CPA}$ - revenue from actions taken //e.g. purchasing an app from add, buying product. CPC excludes using CPA\n",
+    "Total generic revenue from adds can be represented with following euation:\n",
     "\n",
-    "// those costs vary throughout the year. Usually costs go up during periods of intense add campaigns (i.e. Christmas)\n",
+    "$R_{ad (t+1)} = R_{ad (t)} + PR_{ad (t,t+1)}$, where:\n",
     "\n",
-    "$R_{add} = R_{CPM} + R_{CPC} + //R_{CPA}$\n",
-    "***\n",
-    "#### CPM\n",
+    "$R_{ad (t+1)}$ - revenue from advertisements at moment $t+1$\n",
     "\n",
-    "$C_s$ - count of sessions per month [k]\n",
+    "$PR_{ad (t,t+1)}$ - revenue income from moment $t$ to $t+1$. Equations for specific advertisements income models are described below.\n",
     "\n",
-    "$min_s$ - avg. minutes used spend per session [min]\n",
     "\n",
-    "$add_m$ - adds impressions per minute [-/min]\n",
-    "\n",
-    "$F_r$ - fill rate [%] - how many add requests receive add from our add source\n",
-    "\n",
-    "$CPM$ - cost per 1k impressions [USD/1k] // iOS ~5 USD; Android ~2 USD\n",
-    "\n",
-    "$R_{CPM} = C_s / 1000 * min_s * add_m * F_r * CPM$\n",
-    "***\n",
-    "#### CPC\n",
-    "\n",
-    "$CTR$ - click through rate [%] // avg. 0,46 %\n",
-    "\n",
-    "$CPC$ - cost per click [USD] //avg. 0,6 USD\n",
-    "\n",
-    "$R_{CPC} = C_s * CTR * CPC$\n",
     "\n",
     "***\n",
-    "#### CPA\n",
+    "#### 1. CPM pricing model\n",
     "\n",
-    "$CPA$ - cost per action [USD] // Cost varies 4 USD - 75 USD\n",
+    "$PR_{ad (t,t+1)} = C_{s (t+1)} / 1000 * min_{s (t+1)} * add_{m (t+1)} * F_{r (t+1)} * CPM_{(t+1)}$, where:\n",
     "\n",
-    "$CVR$ - conversion rate [%] - how many clicks resulted in action\n",
     "\n",
-    "$R_{CPA} = CPA * C_s * CTR * CVR$"
+    "$C_{s (t+1)}$ - count of sessions per time frame in time $t+1$ [k]\n",
+    "\n",
+    "$min_{s (t+1)}$ - avg. minutes used spend per session in time $t+1$ [min]\n",
+    "\n",
+    "$add_{m (t+1)}$ - adds impressions per minute in time $t+1$ [-/min]\n",
+    "\n",
+    "$F_{r (t+1)}$ - fill rate [%] - how many add requests receive add from our add source in timeframe $t+1$\n",
+    "\n",
+    "$CPM_{(t+1)}$ - cost per 1k impressions in timeframe $t+1$ [USD/1k] // iOS ~5 USD; Android ~2 USD\n",
+    "\n",
+    "***\n",
+    "#### 2. CPC pricing model\n",
+    "\n",
+    "$PR_{ad (t,t+1)} = C_{s (t+1)} * CTR_{(t+1)} * CPC_{(t+1)}$, where:\n",
+    "\n",
+    "$C_{s (t+1)}$ - count of sessions per time frame in time $t+1$ [k]\n",
+    "\n",
+    "$CTR_{(t+1)}$ - click through rate in timeframe $t+1$ [%] // avg. 0,46 %\n",
+    "\n",
+    "$CPC_{(t+1)}$ - cost per click in timeframe $t+1$ [USD] //avg. 0,6 USD\n",
+    "\n",
+    "***\n",
+    "#### 3. CPA pricing model\n",
+    "\n",
+    "$PR_{ad (t,t+1)} = C_{s (t+1)} * CPA_{(t+1)} * CTR_{(t+1)} * CVR_{(t+1)}$\n",
+    "\n",
+    "$R_{CPA} = CPA * C_s * CTR * CVR$\n",
+    "\n",
+    "$C_{s (t+1)}$ - count of sessions per time frame in time $t+1$ [k]\n",
+    "\n",
+    "$CPA_{(t+1)}$ - cost per action in timeframe $t+1$ [USD] // Cost varies 4 USD - 75 USD\n",
+    "\n",
+    "$CTR_{(t+1)}$ - click through rate in timeframe $t+1$ [%] // avg. 0,46 %\n",
+    "\n",
+    "$CVR_{(t+1)}$ - conversion ratein timeframe $t+1$ [%] - how many clicks resulted in action"
    ]
   },
   {
@@ -178,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
