Finished with revenue

--- a/Model.ipynb
+++ b/Model.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "$R_{t+1} = R_t + PR_{t,t+1} - LR_{t,t+1}$, where \n",
     "\n",
-    "$PR_{t,t+1} = R_{add (t+1)} + R_{pr (t+1)}$ - total revenue income from moment $t$ to moment $t+1$\n",
+    "$PR_{t,t+1} = R_{add (t,t+1)} + R_{pr (t,t+1)}$ - total revenue income from moment $t$ to moment $t+1$\n",
     "\n",
     "$LR_{t,t+1} = C_{(t+1)}$ - total revenue loss from moment $t$ to moment $t+1$\n"
    ]
@@ -76,7 +76,11 @@
     "\n",
     "$a_u = N(\\mu,\\sigma^2)$ - user attrition, which is defined by some normal distribution with $\\sigma^2=$ and $\\mu=$\n",
     "\n",
-    "$U_{n (t+1)}$ - new users in given month (*it depends on marketing*)\n"
+    "$U_{n (t+1)}$ - new users in given month (*it depends on marketing*)\n",
+    "\n",
+    "In other words,\n",
+    "\n",
+    "$R_{pr (t+1)} = R_{pr (t)} + Pr_p * P_p * (U_{c (t)} + U_{n (t+1)} - U_{c (t)} * a_u)$\n"
    ]
   },
   {
@@ -85,37 +89,87 @@
    "source": [
     "### Revenue from adds\n",
     "\n",
+    "\n",
+    "Total generic revenue from adds can be represented with following euation:\n",
+    "\n",
+    "$R_{add (t+1)} = R_{add (t)} + PR_{add (t,t+1)}$, where:\n",
+    "\n",
+    "$R_{add (t+1)}$ - revenue from advertisements at moment $t+1$\n",
+    "\n",
+    "$PR_{add (t,t+1)}$ - revenue income from moment $t$ to $t+1$. Equations for specific advertisements income models are described below.\n",
+    "\n",
     "Revenue from advertisements can come from three pricing models. Each of them is caltulated using different equations.\n",
     "\n",
     "1. $R_{CPM}$ - revenue from add views\n",
     "2. $R_{CPC}$ - revenue from clicking on adds\n",
     "3. $R_{CPA}$ - revenue from actions taken, e.g. purchasing an app from add, buying product. CPC excludes using CPA\n",
     "\n",
-    "Total generic revenue from adds can be represented with following euation:\n",
-    "\n",
-    "$R_{ad (t+1)} = R_{ad (t)} + PR_{ad (t,t+1)}$, where:\n",
-    "\n",
-    "$R_{ad (t+1)}$ - revenue from advertisements at moment $t+1$\n",
-    "\n",
-    "$PR_{ad (t,t+1)}$ - revenue income from moment $t$ to $t+1$. Equations for specific advertisements income models are described below.\n",
-    "\n",
     "\n",
     "\n",
     "***\n",
     "#### 1. CPM pricing model\n",
     "\n",
-    "$PR_{ad (t,t+1)} = C_{s (t+1)} / 1000 * min_{s (t+1)} * add_{m (t+1)} * F_{r (t+1)} * CPM_{(t+1)}$, where:\n",
+    "$PR_{add (t,t+1)} = Cs_{t+1} / 1000 * min_{s} * add_{m} * Fr * CPM$, where:\n",
     "\n",
     "\n",
-    "$C_{s (t+1)}$ - count of sessions per time frame in time $t+1$ [k]\n",
+    "$Cs_{t+1}$ - count of sessions per time frame  [-]\n",
     "\n",
-    "$min_{s (t+1)}$ - avg. minutes used spend per session in time $t+1$ [min]\n",
+    "$min_{s }$ - avg. minutes used spend per session [min]\n",
     "\n",
-    "$add_{m (t+1)}$ - adds impressions per minute in time $t+1$ [-/min]\n",
+    "$min_{s} ~ N(\\mu,\\sigma^2)$ where $\\mu=$ and $\\sigma^2=$\n",
     "\n",
-    "$F_{r (t+1)}$ - fill rate [%] - how many add requests receive add from our add source in timeframe $t+1$\n",
+    "$add_{m }$ - adds impressions per minute for given application [-/min]\n",
     "\n",
-    "$CPM_{(t+1)}$ - cost per 1k impressions in timeframe $t+1$ [USD/1k] // iOS ~5 USD; Android ~2 USD\n",
+    "$Fr$ - fill rate [%] - how many add requests receive add from our add source\n",
+    "\n",
+    "$Fr$ ~ $N(\\mu,\\sigma^2)$ where $\\mu=$ and $\\sigma^2=$\n",
+    "\n",
+    "$CPM$ - cost (revenue for us) per 1k impressions [USD/1k] // iOS ~5 USD; Android ~2 USD\n",
+    "\n",
+    "$CPM$ - fixed rate we determine this parameter based on period of the year: summer, autumn, winter, spring.\n",
+    "\n",
+    "$Cs_{t+1} = Cs_{t} + PCs_{t,t+1} - LCs_{t,t+1}$\n",
+    "\n",
+    "$Cs_{t} = (1 - P_p) *U_{c(t)} * Nsa $ - count of sessions is equal to amount of users in a given month minus those who bought premium times average number of session per user.\n",
+    "\n",
+    "$Nsa - N(\\mu, \\sigma^2)$ - average number of users in a given month with $\\mu=$ and $\\sigma^2=$\n",
+    "\n",
+    "$PCs_{t,t+1} = PU_{c (t,t+1)} * Nsa $ - increase in amount of sessions depends on increase of number of users which is covered in **User count** model\n",
+    "\n",
+    "$LCs_{t,t+1} = LU_{c (t,t+1)} * Nsa$ - loss in amount of sessions depends on loss of number of users which is covered in **User count** model\n",
+    "\n",
+    "$PU_{c (t,t+1)} = U_{n (t+1)}$ - user income from moment $t$ to $t+1$\n",
+    "\n",
+    "$LU_{c (t,t+1)} = U_{c (t)} * a_u$ - user loss from moment $t$ to $t+1$\n",
+    "\n",
+    "$a_u$ - user attrition from **User count**\n",
+    "\n",
+    "$U_{c (t)}$ - current users in given month\n",
+    "\n",
+    "$U_{n (t+1)}$ - new users in given month (*it depends on marketing*)\n",
+    "\n",
+    "$Cs_{t+1} = (1 - P_p)*Nsa*(U_{c(t)} + U_{n (t+1)} - U_{c (t)} * a_u)$\n",
+    "\n",
+    "$Cs_{t+1} = (1 - P_p)*Nsa*(U_{c(t)} + U_{n (t+1)} - U_{c (t)} * a_u)$\n",
+    "\n",
+    "In other words,\n",
+    "\n",
+    "$PR_{add (t,t+1)} = (1 - P_p)*Nsa*(U_{c(t)} + U_{n (t+1)} - U_{c (t)} * a_u) * 0,001 * min_{s} * add_{m} * Fr * CPM$\n",
+    "\n",
+    "$R_{add (t+1)} = R_{add (t)} + (1 - P_p)*Nsa*(U_{c(t)} + U_{n (t+1)} - U_{c (t)} * a_u) * 0,001 * min_{s} * add_{m} * Fr * CPM$\n",
+    "\n",
+    "## Total revenue income\n",
+    "\n",
+    "$PR_{t,t+1} =  (1 - P_p)*Nsa*(U_{c(t)} + U_{n (t+1)} - U_{c (t)} * a_u) * 0,001 * min_{s} * add_{m} * Fr * CPM + Pr_p * P_p * (U_{c (t)} + U_{n (t+1)} - U_{c (t)} * a_u)$ - total revenue income from moment $t$ to moment $t+1$\n",
+    "\n",
+    "$PR_{t,t+1} =  (U_{c(t)} + U_{n (t+1)} - U_{c (t)} * a_u) * ((1 - P_p)*Nsa* 0,001 * min_{s} * add_{m} * Fr * CPM + Pr_p * P_p)$\n",
+    "\n",
+    "$R_{t+1} = R_t + PR_{t,t+1} - LR_{t,t+1}$, where \n",
+    "\n",
+    "$PR_{t,t+1} = (U_{c(t)} + U_{n (t+1)} - U_{c (t)} * a_u) * ((1 - P_p)*Nsa* 0,001 * min_{s} * add_{m} * Fr * CPM + Pr_p * P_p)$ - total revenue income from moment $t$ to moment $t+1$ -- **important part**\n",
+    "\n",
+    "$LR_{t,t+1} = C_{(t+1)}$ - total revenue loss from moment $t$ to moment $t+1$\n",
+    "\n",
     "\n",
     "***\n",
     "#### 2. CPC pricing model\n",
@@ -162,13 +216,21 @@
     "    \n",
     "    ongoing\n",
     "    \n",
-    "pensje pracownikow\n",
     "\n",
-    "inwestor\n",
+    "wytworzenie produktu\n",
     "\n",
-    "design\n",
+    "oplata do sklepu\n",
     "\n",
-    "oplata do sklepu"
+    "$LR_{t,t+1} = C_{(t+1)}$ - total revenue loss from moment $t$ to moment $t+1$\n",
+    "\n",
+    "$C_{0} = Cim + Cid$ - initial cost invested in product. Consists from initial investment into development and initial investment into marketing.\n",
+    "\n",
+    "$C_{1} = C_0 + PC_{0,1}$\n",
+    "\n",
+    "$C_{t+1} = C_t + PC_{t,t+1}$\n",
+    "\n",
+    "$PC_{t,t+1} = Cm_{t,t+1} + Co_{t,t+1} + 1/12*Csf$\n",
+    "\n"
    ]
   }
  ],
@@ -188,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
