cleaning up code, adding up functions

--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -10,80 +10,94 @@
     "    \n",
     "    adds_revenue_model = ''\n",
     "    start_year, start_month, end_year, end_month = 0, 0, 0, 0\n",
+    "    current_users = 0\n",
+    "    premium_price = 0\n",
+    "    dict_adds_parameters = {}\n",
     "    \n",
     "    \n",
-    "    def __init__(self, adds_model, dict_dates):\n",
+    "    def __calculate_initial_users(self):\n",
+    "        return 25000\n",
     "        \n",
+    "    def __init__(self, adds_model, dict_adds_parameters, dict_dates, premium_price):\n",
     "        self.adds_revenue_model = adds_model\n",
     "        self.start_year = int(dict_dates('StartYear'))\n",
     "        self.start_month = int(dict_dates('StarthMonth'))\n",
     "        self.end_year = int(dict_dates('EndYear'))\n",
     "        self.end_month = int(dict_dates('EndMonth'))\n",
-    "    \n",
-    "    \n",
+    "        \n",
+    "        self.premium_price = premium_price\n",
+    "        self.dict_adds_parameters = dict_adds_parameters\n",
+    "        \n",
+    "        self.current_users = __calculate_initial_users()\n",
+    "        \n",
     "    def __del__(self):\n",
     "        pass\n",
     "    \n",
+    "    def __calculate_new_users(self):\n",
+    "        return 5000\n",
     "    \n",
-    "    def __users_this_month(self, users_previous_month, users_retention, new_users):\n",
-    "        \n",
-    "        users_this_month = users_previous_month * users_retention + new_users\n",
-    "        return users_this_month\n",
+    "    def __recalculate_users(self, attition_rate, new_users):    \n",
+    "        self.current_users = self.current_users * (1 - attition_rate)  + new_users\n",
     "    \n",
+    "    def __sessions_count_month(self):\n",
+    "        return self.users_count * 45\n",
     "    \n",
-    "    def __revenue_premium_account(self, users_this_month, percent_premium_accounts, premium_price):\n",
-    "        revenue_premium_account = users_this_month * percent_premium_accounts * premium_price\n",
+    "    def __revenue_premium_account(self, percent_premium_accounts):\n",
+    "        revenue_premium_account = self.current_users * percent_premium_accounts * selfpremium_price\n",
     "        return revenue_premium_account\n",
     "    \n",
-    "    \n",
     "    def __revenue_cpm(self, sessions_count, cpm, avg_session_min, add_impressions_min, fill_rate):\n",
-    "        \n",
     "        revenue = sessions_count/1000 * avg_session_min * add_impressions_min * fill_rate\n",
     "        return revenue\n",
     "    \n",
-    "    \n",
-    "    def __revenue_cpc(self, sessions_count, cpc, ctr):\n",
-    "        \n",
+    "    def __revenue_cpc(self, sessions_count, cpc, ctr):    \n",
     "        renevue = sessions_count * cpc * ctr\n",
     "        return renevue\n",
     "    \n",
-    "    \n",
     "    def __revenue_cpa(self, sessions_count, cpa, ctr, cvr):\n",
-    "        \n",
     "        renevue = sessions_count * cpa * ctr * cvr\n",
     "        return renevue\n",
     "    \n",
-    "    \n",
-    "    def __adds_revenue(self, sessions_count, cost_parameter,\\\n",
-    "                       avg_session_min=0, add_impressions_min=0, fill_rate=0,\\\n",
-    "                       ctr=0, cvr=0):\n",
-    "        \n",
+    "    def __adds_revenue(self, sessions_count):\n",
     "        adds_revenue = 0\n",
-    "        \n",
     "        if self.adds_revenue_model == 'CPM':\n",
-    "            adds_revenue = __revenue_cpm(sessions_count, cost_parameter, avg_session_min, add_impressions_min, fill_rate)\n",
-    "        \n",
+    "            adds_revenue = __revenue_cpm(sessions_count,\\\n",
+    "                                         self.dict_adds_parameters('cpm'),\\\n",
+    "                                         self.dict_adds_parameters('avgSessionMin'),\\\n",
+    "                                         self.dict_adds_parameters('addImpressionsMin'),\\\n",
+    "                                         self.dict_adds_parameters('fillRate')\n",
     "        elif self.adds_revenue_model == 'CPC':\n",
-    "            adds_revenue = __revenue_cpc(sessions_count, cost_parameter, ctr)\n",
-    "        \n",
+    "            adds_revenue = __revenue_cpc(sessions_count,\\\n",
+    "                                         self.dict_adds_parameters('cpc'),\\\n",
+    "                                         self.dict_adds_parameters('ctr'))\n",
     "        elif self.adds_revenue_model == 'CPA':\n",
-    "            adds_revenue = __revenue_cpa(sessions_count, cost_parameter, ctr, cvr)\n",
-    "        \n",
+    "            adds_revenue = __revenue_cpa(sessions_count,\\\n",
+    "                                         self.dict_adds_parameters('cpa'),\\\n",
+    "                                         self.dict_adds_parameters('ctr'),\\\n",
+    "                                         self.dict_adds_parameters('cvr'))\n",
     "        return adds_revenue\n",
     "    \n",
-    "    \n",
     "    def __costs_this_month(self):\n",
-    "        pass\n",
+    "        return 10000\n",
     "    \n",
-    "    \n",
-    "    def __revenue_this_month(self, revenue_adds, revenue_premium, costs):\n",
+    "    def __revenue_this_month(self, revenue_adds, revenue_premium, costs):        \n",
     "        total_revenue = revenue_adds + revenue_premium - costs\n",
     "        return total_revenue\n",
     "    \n",
-    "    \n",
     "    def __simulate_month(self):\n",
-    "        pass\n",
-    "    \n",
+    "        # randomize parameters\n",
+    "        percent_premium_accounts = 0.3\n",
+    "                                         \n",
+    "        new_users = __calculate_new_users()\n",
+    "        __recalculate_users(attition_rate, new_users)\n",
+    "        sessions_count = __sessions_count_month\n",
+    "        \n",
+    "        revenue_adds = __adds_revenue(sessions_count)\n",
+    "        revenue_premium = __revenue_premium_account(percent_premium_accounts)\n",
+    "        costs = __costs_this_month()\n",
+    "        \n",
+    "        total_revenue = __revenue_this_month(revenue_adds, revenue_premium, costs)   \n",
+    "        return total_revenue\n",
     "    \n",
     "    def simulate(self):\n",
     "        pass\n",
